Station Analysis started

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -332,11 +332,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Design a query to show how many stations are available in this dataset?\n"
+    "# Design a query to show how many stations are available in this dataset?\n",
+    "session.query(Station.station).count()"
    ]
   },
   {
