Stations query created

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -341,14 +341,14 @@
        "9"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Design a query to show how many stations are available in this dataset?\n",
-    "session.query(Station.station).count()"
+    "session.query(func.distinct(Measurement.station)).count()"
    ]
   },
   {
