Most active stations query is working

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -353,12 +353,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 2772),\n",
+       " ('USC00513117', 2696),\n",
+       " ('USC00519397', 2685),\n",
+       " ('USC00519523', 2572),\n",
+       " ('USC00516128', 2484),\n",
+       " ('USC00514830', 1937),\n",
+       " ('USC00511918', 1932),\n",
+       " ('USC00517948', 683),\n",
+       " ('USC00518838', 342)]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# What are the most active stations? (i.e. what stations have the most rows)?\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "\n",
+    "#preform a query to get the stations and row counts\n",
+    "active_stations = session.query(Measurement.station, func.count(Measurement.prcp)).\\\n",
+    "                                group_by(Measurement.station).\\\n",
+    "                                order_by(func.count(Measurement.prcp).desc()).all()\n",
+    "active_stations"
    ]
   },
   {
