--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "sem          0.015479"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precipitation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>365.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.169987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.295722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.008571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.070000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.191667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2.380000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       precipitation\n",
+       "count     365.000000\n",
+       "mean        0.169987\n",
+       "std         0.295722\n",
+       "min         0.000000\n",
+       "25%         0.008571\n",
+       "50%         0.070000\n",
+       "75%         0.191667\n",
+       "max         2.380000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prcp_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +428,7 @@
        "9"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +457,7 @@
        " ('USC00518838', 342)]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,12 +475,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 54.0, 85.0, 71.66378066378067)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature of the most active station?\n"
+    "# highest temperature recorded, and average temperature of the most active station?\n",
+    "\n",
+    "sel = [Measurement.station, func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)]\n",
+    "\n",
+    "most_active_station = session.query(*sel).\\\n",
+    "    filter(Measurement.station == 'USC00519281').all()\n",
+    "#print(most_active_station)\n",
+    "most_active_station"
    ]
   },
   {
