--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "[('USC00519281', 54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,11 +426,11 @@
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
     "# highest temperature recorded, and average temperature of the most active station?\n",
     "\n",
+    "#functions\n",
     "sel = [Measurement.station, func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)]\n",
     "\n",
     "most_active_station = session.query(*sel).\\\n",
     "    filter(Measurement.station == 'USC00519281').all()\n",
-    "#print(most_active_station)\n",
     "most_active_station"
    ]
   },
